src/objects/AC12__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>package_org3__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_1__c</fullName>
        <label>date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>lookup_org2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Solution Parameter</label>
        <referenceTo>APXTConga4__Conga_Solution_Parameter__c</referenceTo>
        <relationshipLabel>AC12s</relationshipLabel>
        <relationshipName>AC12s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <label>AC12</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AC12 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC12s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>